--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,10 +56,18 @@ jobs:
           POSTGRES_DB: test_heliotrope
         ports:
           - 127.0.0.1:5432:5432
-      meilisearch:
-        image: getmeili/meilisearch
+      mongo:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: test
         ports:
-          - 7700:7700
+          - 27017:27017
+        options:
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.9
@@ -71,6 +79,12 @@ jobs:
           python -m pip install -U pip
           pip install -r requirements/deps.txt
           pip install -r requirements/test.txt
+      - name: Make MongoDB collection
+        run: |
+          mongo -u root -p test --eval "db.getSiblingDB('hitomi').createCollection('info')"
+      - name: Make collection index
+        run: |
+          mongo -u root -p test --eval "db.getSiblingDB('hitomi').getCollection('info').createIndex({'title':'text'}, {'language_override': 'korean'})"              
       - name: Run tests
         run: |
           pytest --cov=heliotrope --cov-report=xml
