--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -44,7 +44,8 @@ body:
     label: Python Version
     description: If the problem occurred during self-hosting, attach your version of Python.
     render: console
-    value: $ python --version
+    placeholder: >-
+      $ python --version
 
 - type: textarea
   attributes:
