--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         ports:
           - 27017:27017
         options:
-          --health-cmd sudo docker exec -d mongo mongosh
+          --health-cmd mongosh
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
