chore(ci): add name mongo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --name mongo 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.9
