chore(ci): remove string

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,10 +82,10 @@ jobs:
           pip install -r requirements/test.txt
       - name: Make MongoDB collection
         run: |
-          sudo docker exec -d mongo `mongosh -u root -p test --eval "db.getSiblingDB('hitomi').createCollection('info')"`
+          sudo docker exec -d mongo mongosh -u root -p test --eval "db.getSiblingDB('hitomi').createCollection('info')"
       - name: Make collection index
         run: |
-          sudo docker exec -d mongo `mongosh -u root -p test --eval "db.getSiblingDB('hitomi').getCollection('info').createIndex({'title':'text'}, {'language_override': 'korean'})"`              
+          sudo docker exec -d mongo mongosh -u root -p test --eval "db.getSiblingDB('hitomi').getCollection('info').createIndex({'title':'text'}, {'language_override': 'korean'})"         
       - name: Run tests
         run: |
           pytest --cov=heliotrope --cov-report=xml --asyncio-mode=auto
