chore: fix typo package name
Signed-off-by: Ryu Juheon <saidbysolo@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Check type
         run: poetry run pyright
       - name: Check untyped function
-        run: poetry run mypy ./crenata
+        run: poetry run mypy ./heliotrope
   test:
     runs-on: ubuntu-latest
     services:
