--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pythonmonkey = "^1.1.0"
 pymongo = "^4.11.1"
 sanic-ext = "^24.12.0"
 sentry-sdk = "^2.27.0"
+asyncpg = "^0.30.0"
 
 [tool.pyright]
 include = ["heliotrope"]
