chore: refactor vscode launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,10 +6,13 @@
     "configurations": [
         {
             "name": "Python: Module",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "heliotrope",
-            "args": ["--config", "config.json"],
+            "args": [
+                "--config",
+                "config.json"
+            ],
         }
     ]
 }
