--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pymongo = "^4.11.1"
 sanic-ext = "^24.12.0"
 sentry-sdk = "^2.29.1"
 asyncpg = "^0.30.0"
+deepdiff = "^8.5.0"
 
 [tool.pyright]
 include = ["heliotrope"]
