--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop, release, hotfix ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop, release, hotfix ]
+    branches: [ main ]
   release:
     types: [ published ]
 
@@ -62,10 +62,18 @@ jobs:
       postgres:
         image: postgres
         env:
-          POSTGRES_PASSWORD: test
-          POSTGRES_DB: test_heliotrope
+          POSTGRES_USER: heliotrope_user
+          POSTGRES_PASSWORD: heliotropepasswd
+          POSTGRES_DB: heliotrope_db
         ports:
           - 127.0.0.1:5432:5432
+      mongo:
+        image: mongo
+        env:
+          MONGO_INITDB_ROOT_USERNAME: heliotrope_user
+          MONGO_INITDB_ROOT_PASSWORD: heliotropepasswd
+        ports:
+          - 127.0.0.1:27017:27017
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
