--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,42 +6,12 @@ services:
     container_name: heliotrope-dev
     ports:
       - 8000:8000
-    depends_on:
-      - postgres
-      - mongodb
     environment:
       # https://github.com/Saebasol/Heliotrope/blob/main/heliotrope/infrastructure/sanic/config.py
-      SANIC_USE_ENV: "true"
-      SANIC_PRODUCTION: "true"
-      SANIC_HOST: "0.0.0.0"
-      SANIC_SENTRY_DSN: ""
-      SANIC_GALLERYINFO_DB_URL: postgresql+asyncpg://heliotrope_user:heliotropepasswd@postgres-heliotrope-dev:5432/heliotrope_db
-      SANIC_INFO_DB_URL: mongodb://heliotrope_user:heliotropepasswd@mongo-heliotrope-dev:27017
-      SANIC_INDEX_FILES: '["index-korean.nozomi"]'
-
-  postgres:
-    image: postgres
-    container_name: postgres-heliotrope-dev
-    ports:
-      - 5432:5432
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: heliotrope_user
-      POSTGRES_PASSWORD: heliotropepasswd
-      POSTGRES_DB: heliotrope_db
-
-  mongodb:
-    container_name: mongo-heliotrope-dev
-    image: mongo
-    ports:
-      - 27017:27017
-    volumes:
-      - mongodb_data:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: heliotrope_user
-      MONGO_INITDB_ROOT_PASSWORD: heliotropepasswd
-
-volumes:
-  mongodb_data:
-  pgdata:
+      HELIOTROPE_USE_ENV: "true"
+      HELIOTROPE_PRODUCTION: "true"
+      HELIOTROPE_HOST: "0.0.0.0"
+      HELIOTROPE_SENTRY_DSN: ""
+      HELIOTROPE_GALLERYINFO_DB_URL: postgresql+asyncpg://heliotrope_user:heliotropepasswd@postgres-heliotrope-dev:5432/heliotrope_db
+      HELIOTROPE_INFO_DB_URL: mongodb://heliotrope_user:heliotropepasswd@mongo-heliotrope-dev:27017
+      HELIOTROPE_INDEX_FILES: '["index-korean.nozomi"]'
